<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">
    <!-- username tag-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Roboto"
        android:text="Username:"
        android:textColor="#FF3F89E7"
        android:textSize="20sp" />
    <!-- username edit area-->
    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Roboto" />
    <!-- password tag-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Roboto"
        android:text="Password:"
        android:textColor="#FF3F89E7"
        android:textSize="20sp" />
    <!-- password edit area-->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Roboto"
        android:inputType="textPassword" />

    <!-- choose password visible-->
    <CheckBox
        android:id="@+id/pwdvisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:text="password visible" />

    <!-- button to login-->
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/login_buttons"
        android:fontFamily="Roboto"
        android:text="Login"
        android:textColor="@android:color/white" />
    <!-- button to register-->
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_buttons"
        android:fontFamily="Roboto"
        android:text="Register"
        android:textColor="@android:color/white" />

    <!-- AdMob -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</LinearLayout>